# arm-hand-pose-estimation

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  benchmark.py  constraints.py  export.py  main.py  postprocess.py  processing.py  prototype_rtmw.py  pyproject.toml  requirements.txt  run.py  smoothing.py  test_extrapolation.py
analysis/: clinical_dimreduce.R  clinical_features.R  compare_clinical.R  explore_clinical.R  longitudinal.R
scripts/: npu_compat.py
src/pose_estimation/: benchmark.py  constraints.py  detection.py  drawing.py  export.py  main.py  metrics.py  models.py  postprocess.py  processing.py  run.py  smoothing.py  timing.py
tests/: test_constraints.py  test_detection.py  test_extrapolation.py  test_matching.py  test_processing.py  test_rtmw_age_gating.py  test_rtmw_confidence.py  test_rtmw_constraints.py  test_rtmw_extrapolation.py  test_rtmw_matching.py  test_rtmw_regions.py  test_smoothing.py
